test/corpus/command_modifiers.txt
=================
Command Level Modifiers
=================
COMMAND INST CMD BIG_ENDIAN
  HIDDEN
  DISABLED
  HAZARDOUS
  CATCHALL
  VIRTUAL
  RESTRICTED
  ACCESSOR MyAccessor "arg"
  SUBPACKETIZER MySubpacketizer "arg"
  TEMPLATE "{\"id\": 1}"
  RESPONSE INST RESP_PKT
  ERROR_RESPONSE INST ERR_PKT
  RELATED_ITEM INST ITEM_NAME
  SCREEN INST SCREEN_NAME
  VALIDATOR my_validator.rb "arg"
  META KEY VALUE

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
      (modifier_hidden)
      (modifier_disabled)
      (modifier_hazardous)
      (modifier_catchall)
      (modifier_virtual)
      (modifier_restricted)
      (modifier_accessor class: (identifier) argument: (string))
      (modifier_subpacketizer class: (identifier) argument: (string))
      (modifier_template (string))
      (modifier_response target: (identifier) packet: (identifier))
      (modifier_error_response target: (identifier) packet: (identifier))
      (modifier_related_item target: (identifier) item: (identifier))
      (modifier_screen target: (identifier) screen: (identifier))
      (modifier_validator class: (filename) argument: (string))
      (modifier_meta key: (identifier) value: (identifier))))
