test/corpus/commands.txt
=================
Command Basic
=================
COMMAND INST CMD BIG_ENDIAN "Description"

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness)
      description: (string))))

=================
Select Command
=================
SELECT_COMMAND INST CMD

---

(source_file
  (select_command
    (select_command_definition
      target: (identifier)
      name: (identifier))))

=================
Select Command Modifiers
=================
SELECT_COMMAND INST CMD
  DISABLE_MESSAGES
  TEMPLATE_FILE "template.bin"
  TEMPLATE_BASE64 "deadbeef"
  SELECT_PARAMETER PARAM1
    MINIMUM_VALUE 0
  DELETE_PARAMETER PARAM2

---

(source_file
  (select_command
    (select_command_definition
      target: (identifier)
      name: (identifier))
    (modifier_disable_messages)
    (modifier_template_file (string))
    (modifier_template_base64 (string))
    (parameter
      (select_parameter_definition
        name: (identifier))
      (modifier_minimum_value (number)))
    (parameter
      (delete_parameter
        name: (identifier)))))

=================
Parameter Definition
=================
COMMAND INST CMD BIG_ENDIAN
  PARAMETER ADDR 0 8 UINT 0 255 0 "Address"

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
      (parameter
        (parameter_definition
          name: (identifier)
          bit_offset: (number)
          bit_size: (number)
          data_type: (number_dtype)
          min: (number)
          max: (number)
          default: (number)
          description: (string)))))

=================
Append Parameter
=================
COMMAND INST CMD BIG_ENDIAN
  APPEND_PARAMETER DATA 16 INT -32768 32767 0 "Data"

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
      (parameter
        (append_parameter_definition
          name: (identifier)
          bit_size: (number)
          data_type: (number_dtype)
          min: (number)
          max: (number)
          default: (number)
          description: (string)))))

=================
ID Parameter
=================
COMMAND INST CMD BIG_ENDIAN
  ID_PARAMETER OPCODE 0 8 UINT 0x01 0x01 0x01

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
      (parameter
        (id_parameter_definition
          name: (identifier)
          bit_offset: (number)
          bit_size: (number)
          data_type: (number_dtype)
          min: (number)
          max: (number)
          default: (number)))))

=================
Array Parameter
=================
COMMAND INST CMD BIG_ENDIAN
  ARRAY_PARAMETER DATA 16 16 UINT 256 "Data Array" BIG_ENDIAN

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
      (parameter
        (array_parameter_definition
          name: (identifier)
          bit_offset: (number)
          item_bit_size: (number)
          item_data_type: (dtype)
          array_bit_size: (number)
          description: (string)
          endianness: (endianness)))))

=================
Delete Parameter
=================
SELECT_COMMAND INST CMD
  DELETE_PARAMETER UNUSED_FIELD

---

(source_file
  (select_command
    (select_command_definition
        target: (identifier)
        name: (identifier))
    (parameter
      (delete_parameter
        name: (identifier)))))
