test/corpus/erb.txt
=================
ERB Expression
:skip
=================
COMMAND INST <%= "CMD" %> BIG_ENDIAN

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (erb_expression (code))
      endianness: (endianness))))

=================
ERB Directive
:skip
=================
<% 10.times do |i| %>
  ITEM TEMP_<%= i %> 0 16 UINT
<% end %>

---

(source_file
  (erb_directive (code))
  (telemetry_definition
    (item_definition
      name: (erb_expression (code))
      bit_offset: (number)
      bit_size: (number)
      data_type: (number_dtype)))
  (erb_directive (code)))

=================
ERB Comment
:skip
=================
<%# This is an internal comment %>
COMMAND INST CMD BIG_ENDIAN

---

(source_file
  (erb_comment (code))
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))))

=================
Render
:skip
=================
<%= render "header.txt", locals: { id: 1 } %>

---

(source_file
  (erb_expression
    code: (code
      (render_call
        file: (string)
        (locals (identifier) (number))))))
