test/corpus/item_modifiers.txt
=================
Item Modifiers
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  ITEM VOLTAGE 0 32 FLOAT
    STATE OFF 0
    STATE ON 1
    UNITS "Volts" "V"
    FORMAT_STRING "%0.2f"
    DESCRIPTION "Updated description"
    META KEY VALUE
    OVERLAP
    KEY MY_KEY
    VARIABLE_BIT_SIZE LEN_ITEM 8 0
    OBFUSCATE
    HIDDEN
    LIMITS DEFAULT 1 ENABLED 10 12 14 16
    LIMITS_RESPONSE my_script.rb "arg"
    CONVERTED_DATA FLOAT

---

(source_file
  (telemetry_definition
    target: (identifier)
    name: (identifier)
    endianness: (endianness))
    (item_definition
      name: (identifier)
      bit_offset: (number)
      bit_size: (number)
      data_type: (number_dtype)
      (modifier_state name: (identifier) value: (number))
      (modifier_state name: (identifier) value: (number))
      (modifier_units label: (string) abbreviation: (string))
      (modifier_format_string (string))
      (modifier_description (string))
      (modifier_meta key: (identifier) value: (identifier))
      (modifier_overlap)
      (modifier_key (identifier))
      (modifier_variable_bit_size length_item: (identifier) bits_per_count: (number) value_bit_offset: (number))
      (modifier_obfuscate)
      (modifier_hidden)
      (modifier_limits
        set: (identifier)
        persistence: (number)
        enabled: (identifier)
        red_low: (number)
        yellow_low: (number)
        yellow_high: (number)
        red_high: (number))
      (modifier_limits_response script: (identifier) argument: (string))
      (modifier_converted_data type: (identifier)))))

=================
Item Conversions
:skip
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  ITEM VOLTAGE 0 32 FLOAT
    READ_CONVERSION my_script.rb "arg"
    POLY_READ_CONVERSION 1.0 2.0 3.0
    SEG_POLY_READ_CONVERSION 0 100 1.0 2.0 3.0 100 200 4.0 5.0 6.0
    GENERIC_READ_CONVERSION_START
      value * 2
    GENERIC_READ_CONVERSION_END

---

(source_file
  (telemetry_definition
    target: (identifier)
    name: (identifier)
    endianness: (endianness))
    (item_definition
      name: (identifier)
      bit_offset: (number)
      bit_size: (number)
      data_type: (number_dtype)
      (conversion_read script: (identifier) argument: (string))
      (conversion_poly_read (number) (number) (number))
      (conversion_seg_poly_read
        (number) (number) (number) (number) (number)
        (number) (number) (number) (number) (number))
      (conversion_generic_read (code)))))
