test/corpus/parameter_modifiers.txt
=================
Parameter Modifiers
=================
COMMAND INST CMD BIG_ENDIAN
  PARAMETER DATA 0 16 UINT 0 65535 0
    STATE OFF 0
    STATE ON 1 HAZARDOUS
    UNITS "Volts" "V"
    FORMAT_STRING "%d"
    DESCRIPTION "New Description"
    META KEY VALUE
    OVERLAP
    KEY $.book.title
    VARIABLE_BIT_SIZE LEN_ITEM 8 0
    OBFUSCATE
    REQUIRED
    MINIMUM_VALUE 10
    MAXIMUM_VALUE 100
    DEFAULT_VALUE 50
    OVERFLOW TRUNCATE

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
      (parameter
        (parameter_definition
          name: (identifier)
          bit_offset: (number)
          bit_size: (number)
          data_type: (number_dtype)
          min: (number)
          max: (number)
          default: (number))
        (modifier_state name: (identifier) value: (number))
        (modifier_state name: (identifier) value: (number) (modifier_hazardous))
        (modifier_units full_name: (string) abbreviated: (string))
        (modifier_format_string (string))
        (modifier_description description: (string))
        (modifier_meta key: (identifier) value: (identifier))
        (modifier_overlap)
        (modifier_key key: (identifier))
        (modifier_variable_bit_size length_field: (identifier) bits_per_count: (number) bit_offset: (number))
        (modifier_obfuscate)
        (modifier_required)
        (modifier_minimum_value (number))
        (modifier_maximum_value (number))
        (modifier_default_value (number))
        (modifier_overflow))))

=================
Parameter Conversions
=================
COMMAND INST CMD BIG_ENDIAN
  PARAMETER DATA 0 16 UINT 0 65535 0
    WRITE_CONVERSION my_script.rb "arg"
    POLY_WRITE_CONVERSION 1.0 2.0 3.0
    GENERIC_WRITE_CONVERSION_START
      value * 2
    GENERIC_WRITE_CONVERSION_END

---

(source_file
  (command
    (command_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
      (parameter
        (parameter_definition
          name: (identifier)
          bit_offset: (number)
          bit_size: (number)
          data_type: (number_dtype)
          min: (number)
          max: (number)
          default: (number))
        (conversion_write script: (identifier) argument: (string))
        (conversion_poly_write (number) (number) (number))
        (conversion_generic_write (code)))))
