test/corpus/telemetry.txt
=================
Telemetry Basic
=================
TELEMETRY INST HEALTH BIG_ENDIAN "Description"

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness)
      description: (string))))

=================
Select Telemetry
=================
SELECT_TELEMETRY INST HEALTH
  HIDDEN
  SELECT_ITEM VOLTAGE
    STATE ON 1
  DELETE_ITEM OLD_ITEM

---

(definition_file
  (select_telemetry
    (select_telemetry_definition
      target: (identifier)
      name: (identifier))
    (modifier_hidden)
    (item
      (select_item_definition
        name: (identifier))
      (modifier_state
        name: (identifier)
        value: (number)))
    (item
      (delete_item_definition
        name: (identifier)))))

=================
Item Definition
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  ITEM VOLTAGE 0 32 FLOAT "Bus Voltage"

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (item_definition
        name: (identifier)
        bit_offset: (number)
        bit_size: (number)
        data_type: (number_dtype)
        description: (string)))))

=================
Append Item
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  APPEND_ITEM CURRENT 32 FLOAT "Bus Current" LITTLE_ENDIAN

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (append_item_definition
        name: (identifier)
        bit_size: (number)
        data_type: (number_dtype)
        description: (string)
        endianness: (endianness)))))

=================
ID Item
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  ID_ITEM PKT_ID 0 8 UINT 0x42

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (id_item_definition
        name: (identifier)
        bit_offset: (number)
        bit_size: (number)
        data_type: (number_dtype)
        value: (number)))))

=================
Append ID Item
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  APPEND_ID_ITEM PKT_ID 8 UINT 0x42 "Description"

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (append_id_item_definition
        name: (identifier)
        bit_size: (number)
        data_type: (number_dtype)
        value: (number)
        description: (string)))))

=================
Array Item
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  ARRAY_ITEM TEMPERATURES 32 16 FLOAT 128 "Sensors"

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (array_item_definition
        name: (identifier)
        bit_offset: (number)
        item_bit_size: (number)
        item_data_type: (identifier)
        array_bit_size: (number)
        description: (string)))))

=================
Append Array Item
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  APPEND_ARRAY_ITEM TEMPERATURES 16 FLOAT 128

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (append_array_item_definition
        name: (identifier)
        item_bit_size: (number)
        item_data_type: (identifier)
        array_bit_size: (number)))))

=================
Select Item
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  SELECT_ITEM VOLTAGE

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (select_item_definition
        name: (identifier)))))

=================
Delete Item
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  DELETE_ITEM OLD_ITEM

---

(definition_file
  (telemetry
    (telemetry_definition
      target: (identifier)
      name: (identifier)
      endianness: (endianness))
    (item
      (delete_item_definition
        name: (identifier)))))
